--- a/Arduino-Alarm/Arduino-Alarm.csproj
+++ b/Arduino-Alarm/Arduino-Alarm.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -88,7 +92,7 @@
     <Compile Include="ConnectArduino.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="SetAlarm\CalculateTime.cs" />
-    <Compile Include="SetAlarm\GetGoogleMap.cs" />
+    <Compile Include="SetAlarm\GetGoogle\GetGoogleMap.cs" />
     <Compile Include="GetSchedule\Check.cs" />
     <Compile Include="GetSchedule\GetSchedule.cs" />
     <Compile Include="GetSchedule\FinalSchedule.cs" />
@@ -98,6 +102,7 @@
       <DependentUpon>SettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="EnterSettings\SettingsViewModel.cs" />
+    <Compile Include="SetAlarm\GetGoogle\RootObject.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
